--- a/PaginaUno/app/src/main/res/values/colors.xml
+++ b/PaginaUno/app/src/main/res/values/colors.xml
@@ -8,6 +8,9 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 
+    <color name="siguiente">#b0f2c2</color>
+    <color name="regresar">#ed5858</color>
+
 
 
 
