--- a/PaginaUno/app/src/main/res/layout/activity_pagina_cinco.xml
+++ b/PaginaUno/app/src/main/res/layout/activity_pagina_cinco.xml
@@ -7,6 +7,34 @@
     android:onClick="preguntaSeis"
     tools:context=".PaginaCinco">
 
+    <Button
+        android:id="@+id/pb26"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@color/regresar"
+        android:onClick="Volver"
+        android:text="@string/volver"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.092"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.976" />
+
+    <Button
+        android:id="@+id/pb27"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@color/siguiente"
+        android:onClick="Siguiente"
+        android:text="@string/next"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.95"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.976" />
+
     <TextView
         android:id="@+id/textView5"
         android:layout_width="346dp"
