--- a/PaginaUno/app/src/main/res/layout/activity_pagina_dos.xml
+++ b/PaginaUno/app/src/main/res/layout/activity_pagina_dos.xml
@@ -6,6 +6,34 @@
     android:layout_height="match_parent"
     tools:context=".PaginaDos">
 
+    <Button
+        android:id="@+id/pb19"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@color/regresar"
+        android:onClick="Volver"
+        android:text="@string/volver"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.092"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.976" />
+
+    <Button
+        android:id="@+id/pb20"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@color/siguiente"
+        android:onClick="Siguiente"
+        android:text="@string/next"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.95"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.976" />
+
     <RadioGroup
         android:layout_width="344dp"
         android:layout_height="256dp"
