--- a/PaginaUno/app/src/main/res/layout/activity_pagina_seis.xml
+++ b/PaginaUno/app/src/main/res/layout/activity_pagina_seis.xml
@@ -6,10 +6,38 @@
     android:layout_height="match_parent"
     tools:context=".PaginaSeis">
 
+    <Button
+        android:id="@+id/pb25"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@color/regresar"
+        android:onClick="Volver"
+        android:text="@string/volver"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.092"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.976" />
+
+    <Button
+        android:id="@+id/pb28"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@color/siguiente"
+        android:onClick="Siguiente"
+        android:text="@string/next"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.95"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.976" />
+
     <TextView
         android:id="@+id/textView6"
-        android:layout_width="346dp"
-        android:layout_height="134dp"
+        android:layout_width="331dp"
+        android:layout_height="48dp"
         android:onClick="preguntaSeis"
         android:text="@string/Pregunta6"
         android:textSize="34sp"
@@ -32,22 +60,22 @@
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.871" />
+        app:layout_constraintVertical_bias="0.873" />
 
     <RadioGroup
-        android:layout_width="344dp"
-        android:layout_height="256dp"
+        android:layout_width="408dp"
+        android:layout_height="312dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.493"
+        app:layout_constraintHorizontal_bias="0.492"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.462">
+        app:layout_constraintVertical_bias="0.399">
 
         <RadioButton
             android:id="@+id/op1"
             android:layout_width="match_parent"
-            android:layout_height="64dp"
+            android:layout_height="78dp"
             android:text="@string/Op6.1"
             android:textSize="20sp" />
 
@@ -68,7 +96,7 @@
         <RadioButton
             android:id="@+id/op4"
             android:layout_width="match_parent"
-            android:layout_height="64dp"
+            android:layout_height="73dp"
             android:text="@string/Op6.4"
             android:textSize="20sp" />
     </RadioGroup>
